Se añadio para cancelar un turno desde el paciente y su swagger
